# driven_nickelate

./: .gitignore  Makefile  README.md  data_download.py  environment.yml  flake.nix  pyproject.toml
driven_nickelate/: config.py  data_download.py  tools.py
driven_nickelate/conductivity_mapping/: _nonlinear.py  abovegap.py  calculation.py  dynamics_slow.py  dynamics_twotemp.py  overlap.py  susceptibility_evolution.py  susceptibility_long.py  susceptibility_temperature.py  temperature.py  temperature_lossy.py
driven_nickelate/device_design/: circuit.tex  make_device.py  optdev_600nm_131222.dxf  uc.dxf
driven_nickelate/file_lists/: xDelay_strongfield_basetemp.csv
driven_nickelate/linear_spectroscopy/: esrr.py  film.py  lsat.py  nosample.py  three_samples.py
driven_nickelate/literature_data/: heat_capacity.csv  heat_capacity_2.csv  lsat_model.py
driven_nickelate/photodoping/: _analysis.py  film.py
driven_nickelate/scripts/: 050223_xPP_xHWP_FileListGenerator.py  aggregate_simulations.py  singlefiles_to_hysteresis.py  xDelay_ChoppedProbe.py  xT_ZnTe_LSAT_interpolated.py  xT_ZnTe_NNO_interpolated.py
driven_nickelate/simulations/: absorption.ipynb  conductivity.ipynb  conductivity.py  data_import.ipynb  field_enhancement.py  gap_heating.py  gapfield.py  gapfield_comparison.py  generate_finefreq_figures.py  plotting.py  pnpa.py  surface.py
driven_nickelate/thesis_figures/: decay.py  dynamics.py  nonlinear.py  overlap.py  photodoping.py  spectroscopy.py  susceptibility.py
notebooks/: fem-field_enhancement.py  nir-tds_photodoping.py  nl-tds_three-temperatures.py  tds_sample-comparisons.py  tds_substrate.py  tds_temperature.py  ttrs_cavity-polarization.py  ttrs_decay.py  ttrs_overlap_dynamics.py  ttrs_susceptibility-evolution.py  ttrs_susceptibility-long.py  ttrs_susceptibility-temperature.py
project_book/: _quarto.yml  index.py  index.qmd  intro.py  intro.qmd  references.py  summary.py
project_book/_book/: index.html  search.json
project_book/calculations/: field_enhancement.py  field_enhancement.qmd  fitparams_finite-elem.csv  time_data.csv
src/experiment/: pyproject.toml
src/experiment/driven_nickelate/: config.py
src/experiment/driven_nickelate/characterization/xrd/: xrd.py
src/experiment/driven_nickelate/conductivity_mapping/: abovegap.py  calculation.py  temperature.py
src/experiment/driven_nickelate/figures/illustrations/afdesign/: nonlinear_spectroscopy.afdesign  pump_probe.afdesign  pump_probe_photodoping.afdesign  pump_probe_thz.afdesign
src/experiment/driven_nickelate/file_lists/nir_pump/: 040323_xPP_TransientProbeScan_PumpNIR.csv  xPP_ProbeScan_PumpNIR.csv
src/experiment/driven_nickelate/file_lists/pump_probe/: 050223_xPP_xHWP.csv  190323_reflection_xHWP_GateScan.csv  220123_xPP_ChoppedProbe.csv
src/experiment/driven_nickelate/linear_spectroscopy/: nosample.py
src/experiment/driven_nickelate/photodoping/: film.py
src/experiment/driven_nickelate/scripts/: aggregate_simulations.py
src/experiment/driven_nickelate/scripts/pump_probe/: lsat_220223.py
src/experiment/driven_nickelate/simulations/: absorption.ipynb  conductivity.py  gap_heating.py  gapfield_comparison.py  surface.py
src/experiment/driven_nickelate/simulations/cad/: optimized_device.json
src/experiment/driven_nickelate/simulations/comsol/: film_esrr.csv
src/experiment/driven_nickelate/simulations/comsol/layered_sim/optical_functions/: lsat_fit_experiment.csv  lsat_literature.csv
src/experiment/driven_nickelate/thesis_figures/: decay.py  dynamics.py  nonlinear.py  overlap.py  photodoping.py  spectroscopy.py  susceptibility.py
src/polars-dataset/: README.md  polars_dataset.py  pyproject.toml
src/scientific_mplstyle/: __init__.py  pyproject.toml
(+151 files in other folders)
