[project]
name = "driven-nickelate"
version = "0.1.0"
description = "Teraherz resonator-driven nickelate thin film"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "cairosvg>=2.7.1",
    "ipykernel>=6.29.5",
    "lmfit>=1.3.2",
    "matplotlib>=3.9.2",
    "maturin>=1.7.4",
    "numpy>=2.1.2",
    "polars>=1.9.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "svgutils>=0.3.4",
    "tqdm>=4.66.5",
    "polars-splines>=0.1.2",
    "scientific-mplstyle",
    "polars-complex",
    "polars-dataset",
    "ezdxf>=1.3.4",
    "requests>=2.32.3",
]

[tool.uv.sources]
scientific-mplstyle = { workspace = true }
polars-complex = { workspace = true }
polars-dataset = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[project.scripts]
data-download = "driven_nickelate.data_download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
