[project]
name = "driven-nickelate"
version = "0.1.0"
description = "Teraherz resonator-driven nickelate thin film"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "arrow>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "cairosvg>=2.7.1",
    "ipykernel>=6.29.5",
    "lmfit>=1.3.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "polars>=1.0,<1.9",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "svgutils>=0.3.4",
    "tqdm>=4.66.5",
    "polars-dataset",
    "ezdxf>=1.3.4",
    "requests>=2.32.3",
    "mplstylize",
    "polars-complex",
    "polars-splines>=0.1.2",
    "hvplot>=0.11.2",
    "pyarrow>=19.0.1",
]

[tool.uv.sources]
polars-dataset = { workspace = true }
mplstylize = { git = "https://github.com/monochromatti/mplstylize" }
polars-complex = { git = "https://github.com/monochromatti/polars-complex.git" }

[tool.uv.workspace]
members = ["packages/polars-dataset"]

[tool.ruff.lint]
extend-select = ["I"]

[project.scripts]
data-download = "driven_nickelate.data_download:main"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "jupytext>=1.16.7",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
