[project]
name = "polars_dataset"
version = "1.0"
description = "Extension of the polars DataFrame with methods for interpolation with the `splines` cargo."
requires-python = ">=3.10"
authors = [{ name = "Mattias Matthiesen" }]
dependencies = ["polars_splines"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
